@@ -20,16 +20,25 @@ public class Chunk {
 	private CompoundTag chunkData;
 	private ByteArrayTag blockData;
 	private ByteArrayTag mapData;
+	
+	public boolean loaded = false;
 
 	private MinecraftLevel level;
-		
-	public Chunk(Tag data, MinecraftLevel level) {
-		this.chunkData = (CompoundTag) data;
+	
+	public Chunk(MinecraftLevel level) {
+		//this.chunkData = (CompoundTag) data;
 		//System.out.println(this.chunkData);
 		//System.exit(0);
 		displayListNum = GL11.glGenLists(1);
 		selectedDisplayListNum = GL11.glGenLists(1);
 		transparentListNum = GL11.glGenLists(1);
+		this.level = level;
+	}
+	
+	public void setData(Tag data)
+	{
+		this.chunkData = (CompoundTag) data;
+
 		CompoundTag levelTag = (CompoundTag) chunkData.value.get(0); // first tag
 		IntTag xPosTag = (IntTag) levelTag.getTagWithName("xPos");
 		IntTag zPosTag = (IntTag) levelTag.getTagWithName("zPos");
@@ -42,7 +51,6 @@ public class Chunk {
 		
 		this.isDirty = true;
 		this.isSelectedDirty = true;
-		this.level = level;
 		
 		//System.out.println(data);
 		//System.exit(0);
@@ -1390,7 +1398,7 @@ public class Chunk {
 			{
 				// TODO: figure out our chunk bounds here (the -63, and below)
 				Chunk otherChunk = level.getChunk(this.x-1, this.z);
-				if (otherChunk != null && otherChunk.getBlock(15, yyy, zzz) == MineCraftConstants.BLOCK_PORTAL)
+				if (otherChunk != null && otherChunk.loaded && otherChunk.getBlock(15, yyy, zzz) == MineCraftConstants.BLOCK_PORTAL)
 				{
 					break;
 				}
@@ -1406,7 +1414,7 @@ public class Chunk {
 			else if (this.x < 63)
 			{
 				Chunk otherChunk = level.getChunk(this.x+1, this.z);
-				if (otherChunk != null && otherChunk.getBlock(0, yyy, zzz) == MineCraftConstants.BLOCK_PORTAL)
+				if (otherChunk != null && otherChunk.loaded && otherChunk.getBlock(0, yyy, zzz) == MineCraftConstants.BLOCK_PORTAL)
 				{
 					break;
 				}
@@ -1571,7 +1579,7 @@ public class Chunk {
 								left = false;
 							} else if(x==0 && this.x > -63) {
 								Chunk leftChunk = level.getChunk(this.x-1, this.z);
-								if(leftChunk != null && checkSolid(leftChunk.getBlock(15, y, z), transparency)) {
+								if(leftChunk != null && leftChunk.loaded && checkSolid(leftChunk.getBlock(15, y, z), transparency)) {
 									draw = true;
 									left = false;
 								}
@@ -1583,7 +1591,7 @@ public class Chunk {
 								right = false;
 							} else if(x==15 && this.x < 63) {
 								Chunk rightChunk = level.getChunk(this.x+1,this.z);
-								if(rightChunk != null && checkSolid(rightChunk.getBlock(0, y, z), transparency)) {
+								if(rightChunk != null && rightChunk.loaded && checkSolid(rightChunk.getBlock(0, y, z), transparency)) {
 									draw = true;
 									right = false;
 								}
@@ -1595,7 +1603,7 @@ public class Chunk {
 								near = false;
 							} else if(z==0 && this.z > -63) {
 								Chunk nearChunk = level.getChunk(this.x,this.z-1);
-								if(nearChunk != null && checkSolid(nearChunk.getBlock(x, y, 15), transparency)) {
+								if(nearChunk != null && nearChunk.loaded && checkSolid(nearChunk.getBlock(x, y, 15), transparency)) {
 									draw = true;
 									near = false;
 								}
@@ -1607,7 +1615,7 @@ public class Chunk {
 								far = false;
 							} else if(z==15 && this.z < 63) {
 								Chunk farChunk = level.getChunk(this.x,this.z+1);
-								if(farChunk != null && checkSolid(farChunk.getBlock(x, y, 0), transparency)) {
+								if(farChunk != null && farChunk.loaded && checkSolid(farChunk.getBlock(x, y, 0), transparency)) {
 									draw = true;
 									far = false;
 								}
