@@ -1,4 +1,6 @@
   * Generate Windows EXE via JSmooth
+  * Fixed a bug that was keeping chunk files open after we were done with them
+  * Load chunks on-demand rather than all at the same time
 
 Minecraft X-Ray 2.7 Maintenance Branch 4 (2010.12.16)
 
